Remove genome parameters being exposed
The parameters are not needed in details of the agents